welcome.lessons.welcome.methods.picture.MethodsPictureLarge.scala.error
MethodsPictureLarge:48: error: method run is defined twice
  conflicting symbols both originated in file 'plm.runtime1.MethodsPictureLarge'
override def run() {
             ^